# email-outgoing-provider

./: Cargo.toml  Justfile  LICENSE  README.md  demo-email-hello-world.wadm.yaml  rust-toolchain.toml  wasmcloud.toml
src/: lib.rs  main.rs
wit/: deps.toml
