[package]
name = "email-outgoing-provider"
version = "0.1.0"
edition = "2021"
description = """
An outgoing email capability provider for wasmCloud, the universal application platform.
"""

[badges.maintenance]
status = "actively-developed"

[dependencies]
wasmcloud-test-util = "0.11"
async-nats = "0.33"
wit-bindgen-wrpc = "0.3.7"
tracing = "0.1"
wasmcloud-provider-sdk = "0.4"
dashmap = "5.5.3"
ulid = { version = "1.1.2", features = ["uuid", "std"] }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
lettre = { version = "0.11.7", features = ["tokio1", "tracing", "rustls-tls", "tokio1-rustls-tls", "tokio1-native-tls"] }
tokio = { version = "1", features = [ "full" ]}

[dev-dependencies]
wasmcloud-test-util = "0.11.0"
