[package]
name = "email-outgoing-provider"
version = "0.1.0"
edition = "2021"
description = """
An outgoing email capability provider for wasmCloud, the universal application platform.
"""

[badges.maintenance]
status = "actively-developed"

[dependencies]
async-nats = "0.33"
dashmap = "5.5.3"
lettre = { version = "0.11.7", features = ["tokio1", "tracing", "rustls-tls", "tokio1-rustls-tls", "tokio1-native-tls"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = [ "full" ]}
tracing = "0.1"
ulid = { version = "1.1.2", features = ["uuid", "std"] }
wasmcloud-provider-sdk = "0.4"
wit-bindgen-wrpc = "0.3.7"
